# Monocle

./: .gitignore  CMakePresets.json  CMakelists.txt  README.md
.github/workflows/: ci.yml
ag_math/: CMakeLists.txt
ag_math/src/: chain_graphviz.c  chain_graphviz.h  main.cpp  prng.hpp  source_math.asm  source_math.cpp  source_math.hpp  test_main.cpp  vag_logic.cpp  vag_logic.hpp
catch/: CMakeLists.txt
monocle/: CMakeLists.txt
monocle/src/: main.cpp  prng.hpp  test_main.cpp  tga.hpp  time_scope.hpp  vag_search.hpp
monocle_lib/: CMakeLists.txt  dbg.natvis
monocle_lib/src/: chain_graphviz.cpp  dot_gen.cpp  gv_gen.cpp  monocle_config.hpp  source_math.asm  source_math.cpp  source_math.hpp  source_math_double.hpp  source_math_double_compare.cpp  source_math_double_compare.hpp  source_math_strings.cpp  tp_ring_queue.hpp  ulp_diff.hpp  vag_logic.cpp  vag_logic.hpp
monocle_lib/src/chain_generation/: chain_state.hpp  gv_flow_control.cpp  gv_flow_control.hpp
monocle_lib/src/game/: source_math.cpp  source_math.hpp  source_math_5135.asm  source_math_double.hpp  source_math_strings.cpp
monocle_lib/src/game/asm/: math_consts.asm  math_interface.inc  source_math_5135.asm  source_math_9862575.asm
monocle_lib/src/teleport_chain/: ent_to_portal.cpp  generate.cpp  generate.hpp  generate_state.hpp  tp_ring_queue.hpp  ulp_diff.hpp
monocle_lib/src/teleport_chain/debug/: csv_precision_compare.cpp  gv_flow_control.cpp  gv_flow_control.hpp  minidump.cpp
py_utils/: bytes_to_asm.py  csv_dump_to_graphviz.py  possible_lag_orientations.py
